add->inheritance